--- a/aboly.html
+++ b/aboly.html
@@ -2654,7 +2654,13 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">为</span>（<span class="lypinyin">wèi</span>）：动词，帮助，支持。<span class="lyexample"><span>【例】</span><span>《老子》结尾：<span class="lyq">天之道，利而不害。圣人之道，为而不争。</span></span></span></p></li>
 <li><p><a id="nuo4"></a><span class="lyterm">诺</span>：表示应允、遵命的答应声，相当于好的，好吧，OK，fine。<span class="lyexample"><span>【例】</span><span>《战国策·齐策四·齐人有冯谖（<span class="lypinyin">xuān</span>）者》：<span class="lyq">孟尝君不说，曰：“诺！先生休矣。”</span>（休矣：停止吧，算了吧，意指闭上嘴退下吧。）</span></span></p></li>
-<li><p><a id="yuan4b"></a><span class="lyterm"><a href="#yuan4a">怨</a></span>：指因失望或失意而后悔、不满。</p></li>
+<li>
+<p><a id="yuan4b"></a><span class="lyterm"><a href="#yuan4a">怨</a></span>：指因失望或失意而后悔、不满。</p>
+<div class="lyseealso">
+<p><span>【参】</span><span>元末丞相脱脱主编的《宋史·文天祥传》后<span class="lyq">论曰：自古志士，欲信大义于天下者，不以<a href="#chengbailidun">成败利钝</a>动其心。君子命之曰“仁”，以其合天理之正，<a href="#ji2a">即</a>人心之安尔。<a href="#shangchao">商</a>之衰，<a href="#zhouchao">周</a>有代德，盟津之师不期而会者八百国。伯夷、叔齐以两男子欲扣马而止之，<a href="#liuchizhigu">三尺童子</a>知其不可。他日，孔子贤之，则曰：“求仁而得仁。”宋至德祐亡矣，文天祥往来兵间，初欲以口舌存之，事既无成，奉两孱王崎岖岭海，以图兴复，兵败身执。我世祖皇帝以天地有容之量，既壮其节，又惜其才，留之数年，如<a href="#husi">虎兕在柙</a>，百计驯之，终不可得。观其从容伏质，<a href="#jiu4a">就</a>死如归，是其所欲有甚于生者，可不谓之“仁”哉！</span></span></p>
+<p>（信：通“伸”，伸张。代德：取代前朝以治天下的盛德。德祐：南宋恭帝趙㬎（<span class="lypinyin">xiǎn</span>）的年号，共2年（1275—1276），其降元时年仅5岁。孱（<span class="lypinyin">chán</span>）：怯弱。两孱王：指继宋恭帝而立的末代幼主益王赵昰（<span class="lypinyin">shì</span>，1276—1278年在位，10岁病逝）、广王赵昺（1278—1279年在位，8岁投海殉国），由大臣保护退至福建、广东及海上，直到崖山海战覆没。我世祖皇帝：元世祖忽必烈，元朝的开国皇帝。质：通“锧”，腰斩之刑所用的砧板。伏质：受死。所欲有甚于生者：出自《孟子·告子上》。）</p>
+</div>
+</li>
 </ul></div>
 </div>
 <a id="7.16"></a><div class="lyblob">
@@ -2952,7 +2958,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#8.6">8.6</a></div>
 <div class="lybloboriginaltext"><p><a href="#zengshen">曾子</a>曰：“可以托六尺之孤，可以寄百里之命，临大节而不可夺也。君子人与？君子人也。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><a id="liuchizhigu"></a><span class="lyterm">托六尺之孤</span>：托付未成年的遗孤。<span class="lyterm">托孤</span>特指君主临终前把（即将成为孤儿的）幼主托付出去。古代<span class="lyterm">六尺</span>指未成年，即15岁以下；七尺指20岁。<a id="chi3"></a><span class="lyterm">尺</span>的实际长度随着时代演变，总体上越往古代越短。周朝1尺约合20.1厘米，六尺约为1.2米；秦汉的1尺就增至23.1厘米。<a id="bu4"></a>另据《周礼·地官司徒·小司徒》郑玄注引《司马法》，六尺即为一<span class="lykeyword">步</span>。</p></li>
+<li><p><a id="liuchizhigu"></a><span class="lyterm">托六尺之孤</span>：托付未成年的遗孤。<span class="lyterm">托孤</span>特指君主临终前把（即将成为孤儿的）幼主托付出去。<span class="lyterm">六尺</span>是以身高来指代未成年人，按《论语注疏》引郑玄的解释，即15岁以下；七尺则为20岁及以上的成年人。<a id="chi3"></a><span class="lyterm">尺</span>的实际长度随着时代演变，总体上越往古代越短。秦汉的1尺约合23.1厘米，周朝1尺则为20.1厘米，六尺约合1.2米，相当于现代儿童7、8岁时的普通身高。另外还有“五尺童子”、“三尺童子”的说法，后者更偏重其幼弱无知。<a id="bu4"></a>据《周礼·地官司徒·小司徒》郑玄注引《司马法》，六尺即为一<span class="lykeyword">步</span>。</p></li>
 <li><p><span class="lyterm">寄百里之<a href="#ming4">命</a></span>：古注多解释为寄托整个国家的政令，意指暂时代理国政。如果和前面的“托孤”连起来看，明显的例子是<a href="#zhougong">周公</a>为成王摄政。也不妨分开理解，即寄托整个国家的命运。<span class="lyterm">百里</span>属于<a href="#bingyi">诸侯国</a>的规模，这里未必是实指。</p></li>
 <li><p><a id="dajie"></a><span class="lyterm">大节</span>：大事，特指关系到国家、民族安危存亡的大事，或关系到个人名誉节操的大事。<a id="jie2c"></a><span class="lyterm">节</span>：本义为竹节，引申为事项，准则，操守。<span class="lyexample"><span>【例】</span><span>古书中常有国之大节、礼之大节、忠孝大节、大节无亏之类的说法。《后汉书·明帝纪》载，明帝登基后，封赏开国元勋邓禹、同母弟刘苍，诏书中赞扬他们<span class="lyq">可以受六尺之托，临大节而不<a href="#nao2">挠</a></span>，就是借用了本章。</span></span><span class="lyseealso"><span>【参】</span><span>《朱子语类》：<span class="lyq">须是才节兼全，方谓之君子。若无其才而徒有其节，虽死何益！……故伊川说：“君子者，才德出众之名。”孔子曰：“<a href="#2.12">君子不器</a>。”既曰君子，须是事事理会得方可。</span>（伊川：程颐，北宋理学家，洛阳伊川人。）</span></span></p></li>
 <li><p><a id="duo2"></a><span class="lyterm">夺</span>：本义为强取，引申为迫使意志、信念等产生动摇或改变。<span class="lyexample"><span>【例】</span><span><a href="#9.26" class="lyref">9.26</a> <span class="lyq">三军可夺帅也，匹夫不可夺志也。</span></span></span></p></li>
@@ -3415,10 +3421,10 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>子曰：“三军可夺帅也，匹夫不可夺志也。”</p></div>
 <div class="lyblobannotation">
 <ul class="lyblobitemize">
-<li><p><span class="lyterm"><a href="#duo2">夺</a></span>：第一个指强取（其性命），第二个指迫使改变，动摇。<span class="lyexample"><span>【例】</span><span>古代官员任内如果父母去世，应当辞职回家<a href="#sannianzhisang">服丧</a>，称为<span class="lykeyword">丁忧</span>（丁：遭逢）；期间如有战争、灾难等重大变故，朝廷需要将其立即起用，就称为<span class="lykeyword">夺情</span>。</span></span><span class="lyseealso"><span>【参】</span><span>程颐语录：<span class="lyq">信有二般：有信人者，有自信者。……学者须要自信，既自信，怎生夺亦不得。</span>南宋郑汝谐《论语意原》：<span class="lyq">可夺者所主在人，不可夺者所主在我。</span></span></span></p></li>
+<li><p><span class="lyterm"><a href="#duo2">夺</a></span>：第一个指强取（其性命），第二个指迫使改变，动摇。<span class="lyexample"><span>【例】</span><span>古代官员任内如果父母去世，应当辞职回家<a href="#sannianzhisang">服丧</a>，称为<span class="lykeyword">丁忧</span>（丁：遭逢）；期间如有战争、灾难等重大变故，朝廷需要将其立即起用，就称为<span class="lykeyword">夺情</span>。</span></span><span class="lyseealso"><span>【参】</span><span>程颐语录：<span class="lyq">信有二般：有信人者，有自信者。……学者须要自信，既自信，怎生夺亦不得。</span>南宋郑汝谐《论语意原》：<span class="lyq">可夺者所主在人，不可夺者所主在我。</span>宋代胡寅《读史管见》：<span class="lyq">莫强于人心，而可以仁结，可以诚感，可以德化，可以义动也。莫柔于人心，而不可以威劫，不可以术诈，不可以法持，不可以力夺也。</span></span></span></p></li>
 <li><p><a id="pifu"></a><span class="lyterm">匹夫</span>：庶民，平民百姓，引申为普通一人，平常人。<span class="lyexample"><span>【例】</span><span>《韩非子·有度》：<span class="lyq">刑过不避大臣，赏善不遗匹夫。</span>苏轼《潮州韩文公庙碑》：<span class="lyq">匹夫而为百世师，一言而为天下法。</span>（韩文公：韩愈，谥号是文。）</span></span></p></li>
 </ul>
-<p><span class="lyseealso"><span>【参】</span><span>本章肯定了独立人格的尊严，志向决心的可贵。即使是小人物，<span class="lyq">富贵不能淫，贫贱不能移，威武不能屈，此之谓大丈夫</span>。（《孟子·滕文公下》。<a href="#yin2">淫</a>：侵犯，相当于 <a href="#12.6" class="lyref">12.6</a>  的“浸润”。）据汪东林《1949年后的梁漱溟》记载，1974年初兴起的“批林批孔”运动中，哲学家梁漱溟（1893—1988）拒绝随大流，反对全盘否定孔子，反对<span class="lyq">把学术研究和政治问题搅在一起</span>。他在学习会上发表长篇讲话，认为孔子是中国历史上影响最大的古人，引起轩然大波，遭到半年多的集中批判。被追问挨批感想时，<span class="lyq">他始而不答，最后却脱口而出：“三军可夺帅也，匹夫不可夺<a href="#zhi4g">志</a>！”</span>要求他解释，回答是：<span class="lyq">我认为，孔子本身<a href="#7.21">不是宗教</a>，也<a href="#6.17">不要人信仰他</a>，他只是要人<a href="#7.28">相信自己的理性</a>。我只是相信自己的理性，而不轻易去相信别的什么。别的人可能对我有启发，但也还<a href="#12.1">只是启发</a>我的理性。归根结底，我还是按我的理性而言而动。因为一定要我说话，再三问我，我才说了“三军可夺帅也，匹夫不可夺志”的老话。吐露出来，是受压力的人说的话，不是在得势的人说的话。“匹夫”就是独人一个，无权无势。他的最后一着只是坚信他自己的“志”，什么都可以夺掉他，但就是这个“志”没法夺掉，就是把他这个人消灭掉，也无法夺掉！</span></span></span></p>
+<p><span class="lyseealso"><span>【参】</span><span>本章肯定了独立人格的尊严，志向决心的可贵。即使是小人物，<span class="lyq">富贵不能淫，贫贱不能移，威武不能屈，此之谓大丈夫</span>。（《孟子·滕文公下》。<a href="#yin2">淫</a>：（积久地）侵蚀，相当于 <a href="#12.6" class="lyref">12.6</a>  的<a href="#jinrunzhizen">浸润</a>。）据汪东林《1949年后的梁漱溟》记载，1974年初兴起的“批林批孔”运动中，哲学家梁漱溟（1893—1988）拒绝随大流，反对全盘否定孔子，反对<span class="lyq">把学术研究和政治问题搅在一起</span>。他在学习会上发表长篇讲话，认为孔子是中国历史上影响最大的古人，引起轩然大波，遭到半年多的集中批判。被追问挨批感想时，<span class="lyq">他始而不答，最后却脱口而出：“三军可夺帅也，匹夫不可夺<a href="#zhi4g">志</a>！”</span>要求他解释，回答是：<span class="lyq">我认为，孔子本身<a href="#7.21">不是宗教</a>，也<a href="#6.17">不要人信仰他</a>，他只是要人<a href="#7.28">相信自己的理性</a>。我只是相信自己的理性，而不轻易去相信别的什么。别的人可能对我有启发，但也还<a href="#12.1">只是启发</a>我的理性。归根结底，我还是按我的理性而言而动。因为一定要我说话，再三问我，我才说了“三军可夺帅也，匹夫不可夺志”的老话。吐露出来，是受压力的人说的话，不是在得势的人说的话。“匹夫”就是独人一个，无权无势。他的最后一着只是坚信他自己的“志”，什么都可以夺掉他，但就是这个“志”没法夺掉，就是把他这个人消灭掉，也无法夺掉！</span></span></span></p>
 </div>
 </div>
 <a id="9.27"></a><div class="lyblob">
@@ -4160,10 +4166,10 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">明</span>：本义为视力敏锐，引申为观察分辨力强。<span class="lyseealso"><span>【参】</span><span>听觉灵敏叫“聪”，引申为感知理解力强。《史记·五帝本纪》：<span class="lyq">聪以知远，明以察微。</span>《史记·商君列传》中，赵良劝意气扬扬的商鞅不宜刻薄少恩，其中有：<span class="lyq">反听之谓聪，内视之谓明，自胜之谓强。<a href="#shun">虞舜</a>有言曰：“自<a href="#bei1">卑</a>也<a href="#shang4">尚</a>矣。”</span>英语的sharp可以形容视力、听力、反应等的灵敏，引申为尖刻、严厉。</span></span></p></li>
 <li>
-<p><span class="lyterm">浸润之谮</span>（<span class="lypinyin">zèn</span>）：好像一点一滴慢慢渗入的（积久日深的）中伤。<span class="lyexample"><span>【例】</span><span>《左传》杜预序讲到经与传的关系，认为国史应该<span class="lyq">广记而备言之，其文缓，其旨远，将令学者原始要终，寻其枝叶，究其所穷。优而柔之，使自求之，<a href="#yan4">餍</a>而饫之，使自趋之。若江海之浸，膏泽之润，涣然冰释，怡然理顺，然后为得也。</span>（饫（<span class="lypinyin">yù</span>）：饱食。）这里的“浸”和“润”是正面的意义，即通过涵泳历史自然而然地通明经义。</span></span></p>
+<p><a id="jinrunzhizen"></a><span class="lyterm">浸润之谮</span>（<span class="lypinyin">zèn</span>）：好像一点一滴慢慢渗入的（积久日深的，gnawing，encroaching）中伤。<span class="lyexample"><span>【例】</span><span>《左传》杜预序讲到经与传的关系，认为国史应该<span class="lyq">广记而备言之，其文缓，其旨远，将令学者原始要终，寻其枝叶，究其所穷。优而柔之，使自求之，<a href="#yan4">餍</a>而饫之，使自趋之。若江海之浸，膏泽之润，涣然冰释，怡然理顺，然后为得也。</span>（饫（<span class="lypinyin">yù</span>）：饱食。）这里的“浸”和“润”是正面的意义，即通过涵泳历史自然而然地通明经义。</span></span></p>
 <p><span class="lyterm">谮</span>：诬陷。<span class="lyexample"><span>【例】</span><span>《史记·鲁周公世家》：<span class="lyq">及<a href="#chengwang">成王</a>用事，人或谮<a href="#zhougong">周公</a>，周公奔楚。</span></span></span></p>
 </li>
-<li><p><span class="lyterm">肤受之愬</span>（<span class="lypinyin">sù</span>）：好像皮肤上都有感觉似的（火辣辣的）诽谤。<a id="su4"></a><span class="lyterm">愬</span>：通“诉”，本义为告诉，诉说，引申为诽谤，说坏话。<span class="lyexample"><span>【例】</span><span><a href="#14.36" class="lyref">14.36</a> <span class="lyq">公伯寮愬子路于季孙。</span></span></span></p></li>
+<li><p><span class="lyterm">肤受之愬</span>（<span class="lypinyin">sù</span>）：好像皮肤上都有感觉似的（火辣辣的，burning，scorching）诽谤。<a id="su4"></a><span class="lyterm">愬</span>：通“诉”，本义为告诉，诉说，引申为诽谤，说坏话。<span class="lyexample"><span>【例】</span><span><a href="#14.36" class="lyref">14.36</a> <span class="lyq">公伯寮愬子路于季孙。</span></span></span></p></li>
 <li><p><span class="lyterm">远</span>：有远见，见识远大。</p></li>
 </ul></div>
 </div>
@@ -5017,7 +5023,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#14.31">14.31</a></div>
 <div class="lybloboriginaltext"><p>子曰：“不逆诈，不亿不信，抑亦先觉者，是贤乎！”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">不逆诈，不亿不信</span>：不先怀有（别人）想欺骗我的戒心，也不先怀有（别人）不相信我的疑虑。<span class="lyterm">逆</span>、<span class="lyterm"><a href="#yi4a">亿</a></span>都是预料、猜测的意思。<span class="lyexample"><span>【例】</span><span>诸葛亮《后出师表》：<span class="lyq">臣鞠躬尽瘁，死而后已，至于成败利钝，非臣之明所能逆睹也。</span></span></span><span class="lyseealso"><span>【参】</span><span><a href="#2.22" class="lyref">2.22</a> <span class="lyq">人而无信，不知其可也。</span></span></span></p></li>
+<li><p><span class="lyterm">不逆诈，不亿不信</span>：不先怀有（别人）想欺骗我的戒心，也不先怀有（别人）不相信我的疑虑。<span class="lyterm">逆</span>、<span class="lyterm"><a href="#yi4a">亿</a></span>都是预料、猜测的意思。<a id="chengbailidun"></a><span class="lyexample"><span>【例】</span><span>诸葛亮《后出师表》：<span class="lyq">臣鞠躬尽瘁，死而后已，至于成败利钝，非臣之明所能逆睹也。</span></span></span><span class="lyseealso"><span>【参】</span><span><a href="#2.22" class="lyref">2.22</a> <span class="lyq">人而无信，不知其可也。</span></span></span></p></li>
 <li>
 <p><span class="lyterm"><a href="#yi4h">抑</a>亦先觉者</span>：可又（能在上当之前）先察觉到的人。</p>
 <p>顺着孔子的思路，把“者”的所指扩展一下，如果人民安居乐业，不用担心上当受骗、言而无信，一旦产生了罪恶，又能靠公平有效的制度督察制裁，以儆效尤，这样的世界也就称得上贤世。</p>
@@ -5529,7 +5535,7 @@ img.characterimg {
 </li>
 <li><p><span class="lyterm">危而不持，<a href="#dian1">颠</a>而不扶</span>。<a id="chi2"></a><span class="lyterm">持</span>：扶助，扶持。本句与后面的<span class="lyterm"><a href="#xiang4b">相</a></span>一语双关，责备他们身为臣下而不作为，使主上迷途难返，陷于无相之<a href="#gu3b">瞽</a>的危险境地。<span class="lyseealso"><span>【参】</span><span><a href="#11.24" class="lyref">11.24</a> <span class="lyq">所谓大臣者，以道事君，不可则止。</span>《明史·海瑞传》海瑞上嘉靖疏：<span class="lyq">今大臣持禄而好谀，小臣畏罪而结舌，臣不胜愤恨。</span><a id="ligu"></a>《后汉书·李固传》载，146年，年幼的汉冲帝被皇太后之兄、大将军梁冀毒死，太尉李固联合司徒胡广、司空赵戒，议立年长有德的清河王为帝。梁冀忌惮清河王之严明，执意立15岁的蠡吾侯（即汉桓帝），争论时<span class="lyq">意气凶凶而言辞激切，自胡广、赵戒以下，莫不慑惮之</span>，而李固坚守本议。一年后，李固被梁冀诬陷而死，临刑前写信给胡广、赵戒说：<span class="lyq">“固受国厚恩，是以竭其股肱，不顾死亡，志欲扶持王室，比隆<a href="#hanwendi">文</a>、<a href="#hanxuandi">宣</a>。何图一朝梁氏迷谬，公等曲从，以吉为凶，成事为败乎？汉家衰微，从此始矣！公等受主厚禄，颠而不扶，倾覆大事，后之良史，岂有所私？固身已矣，于义得矣，夫复何言！”广、戒得书悲惭，皆长叹流涕。</span>（<a id="gugong"></a>股<a href="#gong1b">肱</a>：大腿和胳膊，这里指辅佐（之力），也常比喻辅政重臣。）</span></span></p></li>
 <li>
-<p><span class="lyterm">虎兕（<span class="lypinyin">sì</span>）出于柙（<span class="lypinyin">xiá</span>），龟玉毁于<a href="#du2">椟</a>中</span>。<span class="lyterm">柙</span>：兽笼。<span class="lyterm">兕</span>：野牛。<span class="lyterm">虎兕</span>连用，可泛指凶猛的野兽。<span class="lyexample"><span>【例】</span><span>《韩非子·解老》：<span class="lyq">兕虎有域，而万害有原；避其域，塞其原，则免于诸害矣。</span>（域：指活动范围。）</span></span></p>
+<p><a id="husi"></a><span class="lyterm">虎兕（<span class="lypinyin">sì</span>）出于柙（<span class="lypinyin">xiá</span>），龟玉毁于<a href="#du2">椟</a>中</span>。<span class="lyterm">柙</span>：兽笼。<span class="lyterm">兕</span>：野牛。<span class="lyterm">虎兕</span>连用，可泛指凶猛的野兽。<span class="lyexample"><span>【例】</span><span>《韩非子·解老》：<span class="lyq">兕虎有域，而万害有原；避其域，塞其原，则免于诸害矣。</span>（域：指活动范围。）</span></span></p>
 <p><span class="lyterm">龟玉</span>：龟甲和宝玉，古代视为国之重器。这里用“虎兕”隐指季氏的无名之师，“龟玉”指社稷之臣颛臾，批评两位学生未能尽到持危扶颠、进尽忠言的臣辅之职。<span class="lyseealso"><span>【参】</span><span>《四书集注》：<span class="lyq">言在柙而逸，在椟而毁，典守者不得<a href="#ci2a">辞</a>其过。明二子居其位而不去，则季氏之恶，己不得不任其责也。</span>（<a id="dian3"></a>典：掌管，主持。）</span></span></p>
 </li>
 <li><p><a id="gu4a"></a><span class="lyterm">固</span>：防御坚固，其本义为四周地势险要闭塞，易于长守不变。<span class="lyexample"><span>【例】</span><span>贾谊《过秦论下》：<span class="lyq">秦地被山带河以为固，四塞之国也。</span></span></span></p></li>
