--- a/ly.html
+++ b/ly.html
@@ -13,7 +13,7 @@ permalink: /ly
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.0/css/bootstrap.min.css">
 <style>
 body {
-    font-family: Helvetica, sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
     padding-top: 50px;
 }
 
